//========== ESTRUTURA DA CLÍNICA ==========
Table unidade {
  id_unidade int [pk]
  nome_unidade varchar(50) [not null, unique]
  endereco_unidade varchar(150) [not null]
  bairro_unidade varchar(50) [not null]
  cidade_unidade varchar(50) [not null]

  Note: '1 linha = Uma unidade da clínica'
  }

Table sala {
  id_sala int [pk]
  id_unidade int [not null, ref: > unidade.id_unidade]
  nome_sala varchar(50) [not null]

  indexes {
    (id_unidade, nome_sala) [unique]
    }

    Note: '1 linha = Uma sala da clínica'
  }

Table profissional {
  id_profissional int [pk]
  nome_profissional varchar(150) [not null]
  formacao varchar(50) [not null]
  numero_registro varchar(20) [not null, unique]

  Note: '1 linha = Uma pessoa que atende na clínica'
}

Table especialidade {
  id_especialidade int [pk]
  nome_especialidade varchar(80) [not null, unique]

  Note: '1 linha = Uma especialidade'
}

Table profissional_especialidade {
  id_profissional int [not null, ref: > profissional.id_profissional]
  id_especialidade int [not null, ref: > especialidade.id_especialidade]

  indexes {
    (id_especialidade, id_profissional) [pk]
  }

  Note: '1 linha = O profissional tem uma especialidade. Se tiver mais de uma, aparecerá mais vezes'
}

Table agenda_profissional {
  id_agenda int [pk]
  id_profissional int [not null, ref: > profissional.id_profissional]
  id_unidade int [not null, ref: > unidade.id_unidade]
  dia_da_semana int [not null, note: '1=segunda ... 7=domingo']
  hora_inicio time [not null]
  hora_fim time [not null]
  vigencia_inicio date [not null]
  vigencia_fim date

  Note: '1 linha = Um bloco fixo: profissional, unidade, dia e horário'
}

Table repasse_profissional {
  id_repasse int [pk]
  id_profissional int [not null, ref: > profissional.id_profissional]
  percentual decimal (5,2) [not null, check: `percentual between 0 and 100`]
  vigencia_inicio date [not null]
  vigencia_fim date [note: 'Vazio = vigente']

  Note: '1 linha = Um percentual de repasse'
}


//========== SERVIÇOS E PREÇOS ==========
Table servico {
  id_servico int [pk]
  nome_servico varchar(50) [not null, unique]
  tipo_servico varchar(50) [not null]
  id_especialidade int [ref: >? especialidade.id_especialidade]
  duracao_padrao_min int [not null]

  Note: '1 linha = Um item do catálogo de serviços'
}

Table preco_servico {
  id_preco_servico int [pk]
  id_servico int [not null, ref:> servico.id_servico]
  id_unidade int [not null, ref: > unidade.id_unidade]
  valor decimal (10,2) [not null]
  vigencia_inicio date [not null]
  vigencia_fim date [note: 'Vazio = preço atual']

  Note: '1 linha = Preço particular de um serviço, em uma unidade, em um período'
}

Table convenio {
  id_convenio int [pk]
  nome_convenio varchar(50) [not null, unique]

  Note: '1 linha = Uma operadora'
}

Table plano_convenio {
  id_convenio int [not null, ref: > convenio.id_convenio]
  id_plano int [pk]
  nome_plano varchar(50) [not null]

  indexes {
    (id_convenio, nome_plano) [unique]
  }

  Note: '1 linha = Um plano de um convênio'
}

Table preco_convenio{
  id_preco_convenio int [pk]
  id_plano int [not null, ref: > plano_convenio.id_plano]
  id_servico int [not null, ref: > servico.id_servico]
  id_unidade int [not null, ref:> unidade.id_unidade]
  valor_convenio decimal (10,2) [not null]
  valor_coparticipacao decimal (10,2) [not null]
  vigencia_inicio date [not null]
  vigencia_fim date [note: 'Vazio = valor atual']

  Note: '1 linha = Quanto um plano paga por um serviço, em uma unidade, em um período'
}


//========== PACIENTES ==========
Table canal_captacao {
  id_canal_captacao int [pk]
  nome_canal varchar(50) [not null, unique]

  Note: '1 linha = Uma forma de conhecer a clínica'
}

Table paciente {
  id_paciente int [pk]
  nome_paciente varchar(150) [not null]
  logradouro varchar(150) [not null]
  numero varchar(10) [not null]
  complemento varchar(50)
  cep char(8) [not null]
  bairro varchar(50)
  cidade varchar(50) [not null]
  uf char(2) [not null]
  data_nascimento_paciente date [not null]
  cpf char(11) [not null, unique]
  sexo varchar(15) [not null]
  email varchar(50)
  telefone varchar(20) [not null]
  id_canal_captacao int [not null, ref: > canal_captacao.id_canal_captacao]
  data_cadastro date [not null]

  Note: '1 linha = Uma pessoa cadastrada'
}

Table paciente_plano {
  id_paciente_plano int [pk]
  id_paciente int [not null, ref: > paciente.id_paciente]
  id_plano int [not null, ref: > plano_convenio.id_plano]
  numero_carteirinha varchar(30) [not null]
  data_inicio date [not null]
  data_fim date [note: 'Vazio = plano ativo']

  Note: '1 linha = Um período que o paciente teve um plano'
}


//========== AGENDA E VISITAS ==========
Table atendimento {
  id_atendimento int [pk]
  id_paciente_plano int [ref: >? paciente_plano.id_paciente_plano]
  id_paciente int [not null, ref: > paciente.id_paciente]
  data_atendimento date [not null]

  Note: '1 linha = Uma ida do paciente na clinica, a visita'
}

Table pacote {
  id_pacote int [pk]
  id_paciente int [not null, ref: > paciente.id_paciente]
  id_servico int [not null, ref: > servico.id_servico]
  quantidade_sessoes int [not null]
  valor_total_pago decimal (10,2) [not null]
  data_compra date [not null]
  data_expiracao date [not null]

  Note: '1 linha = Um pacote de serviços vendido, por exemplo 10 sessões de fisioterapia'
}

Table agendamento {
  id_agendamento int [pk]
  id_atendimento int [not null, ref:> atendimento.id_atendimento]
  id_profissional int [not null, ref: > profissional.id_profissional]
  id_servico int [not null, ref: > servico.id_servico]
  id_sala int [not null, ref:> sala.id_sala]
  status varchar(20) [not null]
  id_pacote int [ref:>? pacote.id_pacote]
  id_agendamento_origem int [ref: >? agendamento.id_agendamento]
  hora_inicio time [not null]
  hora_fim time [not null]
  data_marcacao timestamp [not null]

  Note: '1 linha = Um procedimento marcado'
}

Table lista_espera {
  id_lista_espera int [pk]
  id_paciente int [not null, ref: > paciente.id_paciente]
  id_servico int [not null, ref: > servico.id_servico]
  id_unidade int [not null, ref: > unidade.id_unidade]
  id_profissional int [ref: >? profissional.id_profissional]
  data_inclusao_lista_espera timestamp [not null]
  situacao varchar(50) [not null]
  id_agendamento_gerado int [ref: >? agendamento.id_agendamento]

  Note: '1 linha = Um pedido de encaixe'
}

Table encaminhamento {
  id_encaminhamento int [pk]
  id_agendamento_origem int [not null, ref: > agendamento.id_agendamento]
  id_profissional_destino int [not null, ref: > profissional.id_profissional]
  id_agendamento_destino int [ref: >? agendamento.id_agendamento]
  data_encaminhamento timestamp [not null]

  Note: '1 linha = Um profissional indicado para o paciente'
}


//========== DINHEIRO ==========
Table cobranca {
  id_cobranca int [pk]
  id_agendamento int [ref: >? agendamento.id_agendamento]
  id_pacote int [ref: >? pacote.id_pacote]
  tipo_pagador varchar(50) [not null]
  valor decimal (10,2) [not null]
  data_cobranca date [not null]

  Note: '1 linha = Um valor devido por um pagador'
}

Table pagamento {
  id_pagamento int [pk]
  forma_pagamento varchar(15) [not null]
  valor decimal (10,2) [not null]
  data_pagamento date [not null]

  Note: '1 linha = Uma transação'
}

Table pagamento_cobranca {
  id_pagamento int [not null, ref: > pagamento.id_pagamento]
  id_cobranca int [not null, ref: > cobranca.id_cobranca]
  valor_aplicado decimal (10,2) [not null]

  indexes {
    (id_cobranca, id_pagamento) [pk]
  }

  Note: '1 linha = Quanto do pagamento quitou a cobrança'
}

Table parcela {
  id_parcela int [pk]
  id_pagamento int [not null, ref: > pagamento.id_pagamento]
  valor_parcela decimal (10,2) [not null]
  numero_parcela int [not null, check: `numero_parcela between 1 and 6`]
  data_vencimento_parcela date [not null]
  data_recebimento date

  indexes {
    (id_pagamento, numero_parcela) [unique]
  }

  Note: '1 linha = Valor a receber'
}

Table fatura_convenio {
  id_fatura int [pk]
  id_convenio int [not null, ref: > convenio.id_convenio]
  id_unidade int [not null, ref: > unidade.id_unidade]
  competencia date [not null]
  data_envio date [not null]
  data_recebimento date
  valor_recebido decimal (10,2)

  indexes {
    (id_convenio, id_unidade, competencia) [unique]
  }

    Note: '1 linha = A conta mensal enviada a um convenio por uma unidade'
}

Table motivo_glosa {
  id_motivo_glosa int [pk]
  descricao_motivo varchar(50) [not null, unique]

  Note: '1 linha = Um motivo de recusa do convênio'
}

Table fatura_item {
  id_fatura_item int [pk]
  id_fatura int [not null, ref: > fatura_convenio.id_fatura]
  id_cobranca int [not null, unique, ref: -cobranca.id_cobranca]
  valor_glosado decimal (10,2) [not null, default: 0]
  id_motivo_glosa int [ref: >? motivo_glosa.id_motivo_glosa]

  Note: '1 linha = Cobrança do convênio dentro de uma fatura'
}


//========== DADOS CLÍNICOS (LGPD art. 11) ==========
Table prontuario {
  id_prontuario int [pk]
  id_agendamento int [not null, unique, ref: - agendamento.id_agendamento]
  queixa varchar(150) [not null]
  conduta varchar(150) [not null]
  data_registro timestamp [not null]

  Note: 'Acesso restrito. 1 linha = Registro clínico'
}

Table cid {
  codigo_cid varchar(10) [pk]
  descricao_cid varchar(150) [not null]

  Note: '1 linha = Código do CID-10'
}

Table prontuario_cid {
  id_prontuario int [not null, ref: > prontuario.id_prontuario]
  codigo_cid varchar(10) [not null, ref: > cid.codigo_cid]
  tipo_diagnostico varchar(50) [not null]

  indexes {
    (id_prontuario, codigo_cid) [pk]
  }

  Note: 'Acesso restrito. 1 linha = Diagnóstico registrado no prontuário'
}
